# auth-rs

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs  password_auth.rs
src/: lib.rs  login.rs  manage.rs  password.rs  spec.rs
