[package]
name = "derive"
version = "0.1.0"
edition = "2021"
authors = [ "Lut99" ]
repository = "https://github.com/Lut99/auth-rs"
description = "Provides procedural macros for the `auth`-crate."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = "2.0"


[features]
password = []
